<resources>
    <string name="app_name">TwitterApp</string>
    <string name="retweet_android_string_videoview_error_button">retweet @android:string/VideoView_error_button</string>
    <string name="reply_android_string_videoview_error_button">reply @android:string/VideoView_error_button</string>
    <string name="favorite_android_string_videoview_error_button">favorite @android:string/VideoView_error_button</string>
    <string name="name">Name</string>
    <string name="username">UserName</string>
    <string name="tweet">Tweet</string>
    <string name="logo_of_twitter">logo of Twitter</string>
    <string name="follower">Follower</string>
    <string name="tar"><![CDATA[Tweets&replies]]></string>
    <string name="all">All</string>
    <string name="mentions">Mentions</string>
    <string name="notifications">Notifications</string>
    <string name="following">Following</string>
    <string name="signout">Signout</string>
    <string name="sign_out">Sign Out</string>
</resources>
