<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <ImageView
            android:id="@+id/twitterlogo"
            android:layout_width="37dp"
            android:layout_height="32dp"
            android:layout_alignEnd="@+id/tweet"
            android:layout_alignTop="@+id/tweetUsername"
            android:contentDescription="@string/logo_of_twitter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.959"
            app:layout_constraintStart_toEndOf="@+id/tweetUsername"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/twitterlogo" />

        <TextView
            android:id="@+id/tweetName"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tweetUsername"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_alignBaseline="@+id/tweetName"
            android:layout_alignBottom="@+id/tweetName"
            android:layout_toStartOf="@+id/favoritebtn"
            android:layout_toEndOf="@id/tweetName"
            android:text="@string/username"
            app:layout_constraintStart_toEndOf="@+id/tweetName"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/favoritebtn"
            android:layout_width="53dp"
            android:layout_height="33dp"
            android:layout_below="@+id/tweet"
            android:layout_marginTop="13dp"
            android:layout_toEndOf="@+id/retweetbtn"
            android:contentDescription="@string/favorite_android_string_videoview_error_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/retweetbtn"
            app:layout_constraintTop_toBottomOf="@+id/tweet"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/like" />

        <ImageView
            android:id="@+id/retweetbtn"
            android:layout_width="53dp"
            android:layout_height="33dp"
            android:layout_alignTop="@+id/favoritebtn"
            android:layout_toEndOf="@+id/replybtn"
            android:contentDescription="@string/retweet_android_string_videoview_error_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/replybtn"
            app:layout_constraintTop_toBottomOf="@+id/tweet"
            app:srcCompat="@drawable/retweet2" />

        <TextView
            android:id="@+id/tweet"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/twitterlogo"
            android:layout_marginTop="12dp"
            android:text="@string/tweet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twitterlogo" />

        <ImageView
            android:id="@+id/replybtn"
            android:layout_width="50dp"
            android:layout_height="33dp"
            android:layout_alignStart="@+id/tweetName"
            android:layout_alignTop="@+id/retweetbtn"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/reply_android_string_videoview_error_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tweet"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/reply" />

</RelativeLayout>